--- a/manuscript/pareto-lakes.bib
+++ b/manuscript/pareto-lakes.bib
@@ -498,3 +498,24 @@
   year={2006},
   publisher={American Society for Photogrammetry and Remote Sensing}
 }
+
+@software{jemma_stachelek_2022_7459227,
+  author       = {Jemma Stachelek},
+  title        = {{VeinsOfTheEarth/pareto\_lake\_area}},
+  month        = dec,
+  year         = 2022,
+  publisher    = {Zenodo},  
+  doi          = {10.5281/zenodo.7459226},
+  url          = {https://doi.org/10.5281/zenodo.7459226}
+}
+
+@article{cheruvelil2021lagos,
+  title={LAGOS-US LOCUS v1. 0: Data module of location, identifiers, and physical characteristics of lakes and their watersheds in the conterminous US},
+  author={Cheruvelil, Kendra Spence and Soranno, Patricia A and McCullough, Ian M and Webster, Katherine E and Rodriguez, Lauren K and Smith, Nicole J},
+  journal={Limnology and Oceanography Letters},
+  volume={6},
+  number={5},
+  pages={270--292},
+  year={2021},
+  publisher={Wiley Online Library}
+}
