--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -32,8 +32,8 @@
 %\date{}
 
 % Uncomment to override  the `A preprint' in the header
-\renewcommand{\headeright}{\href{https://doi.org/}{DOI: 10.XXX/XXX}}
-\renewcommand{\undertitle}{This is an Accepted Manuscript of an article published in Limnology \& Oceanography: Methods \href{https://doi.org/}{DOI: 10.XXX/XXX}}
+\renewcommand{\headeright}{\href{https://doi.org/}{DOI: 10.1002/LOM3.10536}}
+\renewcommand{\undertitle}{This is an Accepted Manuscript of an article published in Limnology \& Oceanography: Methods \href{https://doi.org/10.1002/LOM3.10536}{DOI: 10.1002/LOM3.10536}}
 \renewcommand{\shorttitle}{Pareto lake area uncertainty}
 
 %%% Add PDF metadata to help others organize their library
