--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -116,7 +116,7 @@ In contrast to the fixed a and fixed total lake area estimates produced by the f
 \begin{figure}
 	\centering
 	\includegraphics{figures/predict_censor-1}
-	\caption{Simulated lake area (purple line) where the portion calculated from the edf (>= 0.1 $km^2$) is denoted by a solid line and the portion calculated from the transformed cdf (< 0.1 $km^2$) is denoted by a dashed line. For comparison, the edf of the HydroLAKES dataset (solid yellow line) is also shown.}
+	\caption{Simulated lake area (yellow line) where the portion calculated from the edf (>= 0.1 $km^2$) is denoted by a solid line and the portion calculated from the transformed cdf (< 0.1 $km^2$) is denoted by a dashed line. For comparison, the edf of the HydroLAKES dataset (solid purple line) is also shown.}
 	\label{fig:predict_censor}
 \end{figure}
 
